<resources>
    <string name="app_name">WeatherApp</string>
    <string name="tv_time">20/07/2022 13:00</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="_20c">20°C</string>
    <string name="sunny">Sunny</string>
    <string name="_10_5">10°С/-5°С</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday_14_12_24">Monday 14/12/24</string>



</resources>