<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tvTemp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/dp0"
    app:cardBackgroundColor="@color/back_card_view"
    app:cardCornerRadius="@dimen/dp15"
    app:cardElevation="@dimen/dp0"
    app:tabMode="fixed"
    android:layout_marginTop="@dimen/dp3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            android:fontFamily="@font/aldrich"
            android:text="@string/monday_14_12_24"
            android:textSize="@dimen/sp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCondition"
            style="@style/bg_tv_text"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:fontFamily="@font/aldrich"
            android:text="@string/sunny"
            android:textSize="@dimen/sp18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/currentTemp"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@android:drawable/btn_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/dp10"/>

        <TextView
            android:id="@+id/currentTemp"
            style="@style/bg_tv_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/_20c"
            android:textSize="@dimen/sp24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>